Enhance README with setup details and screenshots
Added screenshots, setup instructions, and default login credentials to README.